# time_interpret

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: docs.yml  paper.yml  publish.yml  syntax.yml  tests.yml
docs/: README.md  requirements.txt
docs/paper/: abstract.tex  bibliography.bib  conclusion.tex  icml2023.sty  introduction.tex  main.tex  methods.tex  presentation.tex
docs/source/: attr.rst  attr_models.rst  conf.py  datasets.rst  index.rst  install.rst  metrics.rst  metrics_weights.rst  models.rst  white_box_metrics.rst
examples/: .gitignore  Arma.ipynb  HMM.ipynb  Test.ipynb  Test2.ipynb
experiments/: README.md
experiments/arma/: README.md  bayes_mask_params.csv  bayes_mask_params.py  extremal_mask_params.csv  extremal_mask_params.py  main.py  main.sh  reset.py  results.csv
experiments/covtype/: README.md  main.py  reset.py
experiments/hawkes/: README.md  classifier.py  main.py  reset.py  results.csv
experiments/hmm/: README.md  bayes_mask_params.py  classifier.py  extremal_mask_params.csv  extremal_mask_params.py  lambda_study.csv  lambda_study.sh  loss_study.csv  main.py  reset.py  results.csv
experiments/mimic3/: README.md  bayes_mask_params.py  classifier.py  main.py  main.sh  reset.py  results.csv
experiments/mnist/: README.md  classifier.py  main.py  reset.py  results.csv  utils.py
experiments/moons/: .gitignore  README.md  main.py  main.sh  reset.py  results.csv
experiments/nlp/: .gitignore  README.md  knn.py  main.py  reset.py  results.csv  utils.py  word_sim.json
experiments/sst2/: .gitignore  knn.py  main.py  metrics.py  reset.py  utils.py
experiments/voc/: README.md  classifier.py  main.py  reset.py  results.csv
tests/: README.md  basic_models.py  models.py  requirements.txt  test_init.py
tests/attr/: test_augmented_occlusion.py  test_bayes.py  test_bayes_mask.py  test_discretised_ig.py  test_dynamic_masks.py  test_extremal_mask.py  test_fit.py  test_geodesic_ig.py  test_guided_ig.py  test_lof.py  test_non_linearities_tunnel.py  test_occlusion.py  (+8 more)
(+145 files in other folders)
